[package]
name = "dgw"
version = "1.0.0"
edition = "2021"

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
twilight-gateway = { default-features = false, features = ["zlib-simd", "rustls-webpki-roots"], version = "0.13" }
twilight-model = "0.13"
async-nats = "0.18.0"
tokio = "1.20.1"
anyhow = "1.0.62"
futures-util = { default-features = false, version = "0.3" }
serde_json = { features = ["raw_value"], version = "1.0" }
serde = "1.0.143"
bytes = "1.2.1"
tracing-subscriber = "0.3.15"

[dependencies.twilight-http]
version = "0.13"
features = ["decompression", "rustls-webpki-roots", "trust-dns"]
